fix wrap lines width

--- a/src/components/pages/css/login.css
+++ b/src/components/pages/css/login.css
@@ -8,10 +8,6 @@
 
   lost-column: 3/11;
   lost-offset: -4/11;
-
-  & > * {
-    width: 100%;
-  }
 }
 
 .icon {
@@ -35,6 +31,7 @@
   background-color: var(--redish);
   border: 1px solid color(var(--redish) blackness(+20%));
   margin-bottom: calc(46px - var(--dividerMargin));
+  width: 100%;
 }
 
 .divider {
